Adding Empirical Rule calculator, links, and notes

--- a/1 Start Here/Common MyOpenMath Codes.html
+++ b/1 Start Here/Common MyOpenMath Codes.html
@@ -360,6 +360,33 @@
                                 </div>
                             </textarea>
                         </div>
+
+                        <div class="iframe-copy">
+                            <p style="font-family: Arial, sans-serif; font-size: 14px; color: #034078; text-align: center; margin-bottom: 10px;">
+                                Contains a responsive iframe element for embedding the GeoGebra Empirical Rule Calculator into MyOpenMath problems.
+                            </p>
+                            <button onclick="copyCodeToClipboard('empiricalRuleGeoGebraTool')" 
+                                style="background-color: #034078; color: white; border: none; padding: 8px 15px; font-size: 14px; border-radius: 5px; cursor: pointer;">
+                                Copy Empirical Rule Calculator GeoGebra Tool
+                            </button>
+                            <textarea id="empiricalRuleGeoGebraTool" style="position: absolute; left: -9999px;">
+                                <p>Below is the GeoGebra Empirical Rule Calculator. If this app is too small to view, you can open the 
+                                    <a href="https://www.geogebra.org/material/iframe/id/sgrmqchm" target="_blank" rel="noopener noreferrer">
+                                        application here in a new window
+                                    </a>.
+                                </p>
+                                <div style="background-color: #A9D6E5; border: 3px solid #034078; padding: 10px; border-radius: 5px; display: flex; justify-content: center;">
+                                    <div style="position: relative; width: 100%; max-width: 800px; padding-top: 56.4%;">
+                                        <iframe scrolling="no" title="Empirical Rule Calculator" 
+                                            src="https://www.geogebra.org/material/iframe/id/sgrmqchm/width/1164/height/656/border/888888/sfsb/true/smb/false/stb/false/stbh/false/ai/false/asb/false/sri/true/rc/false/ld/false/sdz/false/ctl/false" 
+                                            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0;">
+                                        </iframe>
+                                    </div>
+                                </div>
+                            </textarea>
+                        </div>
+                        
+
                         <div class="iframe-copy">
                             <p
                                 style="font-family: Arial, sans-serif; font-size: 14px; color: #034078; text-align: center; margin-bottom: 10px;">
