--- a/1 Start Here/GeoGebra Embed Codes.html
+++ b/1 Start Here/GeoGebra Embed Codes.html
@@ -95,7 +95,7 @@
                         </li>
                         <li>Discrete Probability Distribution</li>
                         <li><a href="https://www.geogebra.org/m/prfhvg3m" target="_blank" rel="noopener">Binomial
-                                Distribution Calculator</a>&nbsp;<button onclick="copyToClipboard('binom')">Copy Embed
+                                Distribution Calculator</a><button onclick="copyToClipboard('binom')">Copy Embed
                                 Code to Clipboard</button>
                             <pre id="binom"
                                 style="display: none;">&lt;iframe scrolling="no" title="Binomial Distribution Calculator" src="https://www.geogebra.org/material/iframe/id/jmftj3qq/width/873/height/639/border/888888/sfsb/true/smb/false/stb/false/stbh/false/ai/false/asb/false/sri/true/rc/false/ld/false/sdz/false/ctl/false" width="873px" height="639px" style="border:0px;"&gt;&lt;/iframe&gt;</pre>
@@ -112,25 +112,25 @@
                                         style="display: none;">&lt;iframe scrolling="no" title="Histogram Generation Tool" src="https://www.geogebra.org/material/iframe/id/zsasjepe/width/781/height/440/border/888888/sfsb/true/smb/true/stb/false/stbh/false/ai/false/asb/false/sri/false/rc/false/ld/false/sdz/false/ctl/false" width="781px" height="440px" style="border:0px;"&gt;&lt;/iframe&gt;</pre>
                                 </li>
                                 <li><a href="https://www.geogebra.org/m/svdxyybm" target="_blank" rel="noopener">Dotplot
-                                        Generator</a>&nbsp;<button onclick="copyToClipboard('dotplot')">Copy Embed Code
+                                        Generator</a><button onclick="copyToClipboard('dotplot')">Copy Embed Code
                                         to Clipboard</button>
                                     <pre id="dotplot"
                                         style="display: none;">&lt;iframe scrolling="no" title="Dotplot Generator" src="https://www.geogebra.org/material/iframe/id/ychuscp9/width/881/height/602/border/888888/sfsb/true/smb/true/stb/false/stbh/false/ai/false/asb/false/sri/true/rc/false/ld/false/sdz/false/ctl/false" width="881px" height="602px" style="border:0px;&gt;&lt;/iframe&gt;</pre>
                                 </li>
                                 <li><a href="https://www.geogebra.org/m/khx9mq7k" target="_blank" rel="noopener">Time
-                                        Series Generator</a>&nbsp;<button onclick="copyToClipboard('timeseries')">Copy
+                                        Series Generator</a><button onclick="copyToClipboard('timeseries')">Copy
                                         Embed Code to Clipboard</button>
                                     <pre id="timeseries"
                                         style="display: none;">&lt; iframe scrolling="no" title="Time Series Generator" src="https://www.geogebra.org/material/iframe/id/e6pvjjz3/width/944/height/571/border/888888/sfsb/true/smb/true/stb/false/stbh/false/ai/false/asb/false/sri/false/rc/false/ld/false/sdz/false/ctl/false" width="944px" height="571px" style="border:0px;"&gt;&lt;/iframe&gt;</pre>
                                 </li>
                                 <li><a href="https://www.geogebra.org/m/tmu6ja9y" target="_blank" rel="noopener">Bar and
-                                        Pie Graph Generator</a>&nbsp;<button onclick="copyToClipboard('barpie')">Copy
+                                        Pie Graph Generator</a><button onclick="copyToClipboard('barpie')">Copy
                                         Embed Code to Clipboard</button>
                                     <pre id="barpie"
                                         style="display: none;">&lt; iframe scrolling="no" title="Bar and Pie Graph Generator" src="https://www.geogebra.org/material/iframe/id/pb6xvej6/width/1419/height/621/border/888888/sfsb/true/smb/true/stb/false/stbh/false/ai/false/asb/false/sri/true/rc/false/ld/true/sdz/false/ctl/false" width="1419px" height="621px" style="border:0px;"&gt;&lt;/iframe&gt;</pre>
                                 </li>
                                 <li><a href="https://www.geogebra.org/m/gyymcsbx" target="_blank" rel="noopener">Boxplot
-                                        Generator</a>&nbsp;<button onclick="copyToClipboard('boxplot')">Copy Embed Code
+                                        Generator</a><button onclick="copyToClipboard('boxplot')">Copy Embed Code
                                         to Clipboard</button>
                                     <pre id="boxplot"
                                         style="display: none;">&lt;iframe scrolling="no" title="BoxPlot Generator" src="https://www.geogebra.org/material/iframe/id/ytvffjt2/width/904/height/490/border/888888/sfsb/true/smb/true/stb/false/stbh/false/ai/false/asb/false/sri/true/rc/false/ld/false/sdz/true/ctl/false" width="904px" height="490px" style="border:0px;"&gt;&lt;/iframe&gt;</pre>
@@ -138,7 +138,7 @@
                             </ul>
                         </li>
                         <li><a href="https://www.geogebra.org/m/epr8jb4h" target="_blank" rel="noopener">Linear
-                                Regression Tool</a>&nbsp;<button onclick="copyToClipboard('linreg')">Copy Embed Code to
+                                Regression Tool</a><button onclick="copyToClipboard('linreg')">Copy Embed Code to
                                 Clipboard</button>
                             <pre id="linreg"
                                 style="display: none;">&lt;iframe scrolling="no" title="Linear Regression Tool" src="https://www.geogebra.org/material/iframe/id/npksdkc4/width/968/height/683/border/888888/sfsb/true/smb/true/stb/false/stbh/false/ai/false/asb/false/sri/true/rc/false/ld/false/sdz/false/ctl/false" width="968px" height="683px" style="border:0px;"&gt;&lt;/iframe&gt;</pre>
@@ -147,12 +147,15 @@
                     <h2>Summary Statistics</h2>
                     <ul>
                         <li><a href="https://www.geogebra.org/m/gka7dwu7" target="_blank" rel="noopener">Summary
-                                Statistics Calculator</a>&nbsp;<button onclick="copyToClipboard('summarystats')">Copy
+                                Statistics Calculator</a><button onclick="copyToClipboard('summarystats')">Copy
                                 Embed Code to Clipboard</button>
                             <pre id="summarystats"
                                 style="display: none;">&lt;iframe scrolling="no" title="Summary Stats Calculator" src="https://www.geogebra.org/material/iframe/id/a8vdcm73/width/1326/height/591/border/888888/sfsb/true/smb/true/stb/false/stbh/false/ai/false/asb/false/sri/true/rc/false/ld/false/sdz/false/ctl/false" width="1326px" height="591px" style="border:0px;"&gt;&lt;/iframe&gt;</pre>
                         </li>
-                        <li>Percentile Calculator</li>
+                        <li><a href="https://www.geogebra.org/m/xttfsxzr" target="_blank" rel="noopener">Empirical Rule Calculator</a><button onclick="copyToClipboard('empiricalRule')">Copy
+                            Embed Code to Clipboard</button>
+                        <pre id="empiricalRule"
+                            style="display: none;">&lt;iframe scrolling="no" title="Empirical Rule Calculator" src="https://www.geogebra.org/material/iframe/id/sgrmqchm/width/1164/height/656/border/888888/sfsb/true/smb/false/stb/false/stbh/false/ai/false/asb/false/sri/true/rc/false/ld/false/sdz/false/ctl/false" width="1164px" height="656px" style="border:0px;"&gt;&lt;/iframe&gt;</pre></li>
                     </ul>
                     <h2>Probability Calculators</h2>
                     <ul>
@@ -163,7 +166,7 @@
                                 style="display: none;">&lt;iframe scrolling="no" title="Normal Distribution Calculator" src="https://www.geogebra.org/material/iframe/id/qgquy9qs/width/1350/height/545/border/888888/sfsb/true/smb/false/stb/false/stbh/false/ai/false/asb/false/sri/true/rc/false/ld/false/sdz/false/ctl/false" width="1350px" height="545px" style="border:0px;"&gt;&lt;/iframe&gt;</pre>
                         </li>
                         <li><a href="https://www.geogebra.org/m/ubcyajry" target="_blank"
-                                rel="noopener">\(t\)-distribution</a>&nbsp;<button
+                                rel="noopener">\(t\)-distribution</a><button
                                 onclick="copyToClipboard('Tcalc')">Copy Embed Code to Clipboard</button>
                             <pre id="Tcalc"
                                 style="display: none;">&lt;iframe scrolling="no" title="Student T Calculator" src="https://www.geogebra.org/material/iframe/id/nu3hsek6/width/971/height/622/border/888888/sfsb/true/smb/false/stb/false/stbh/false/ai/false/asb/false/sri/true/rc/false/ld/false/sdz/false/ctl/false" width="971px" height="622px" style="border:0px;"&gt;&lt;/iframe&gt;</pre>
@@ -172,7 +175,7 @@
                     <h2>Confidence Intervals and Hypothesis Testing</h2>
                     <ul>
                         <li><a href="https://www.geogebra.org/m/yqvx78n5" target="_blank" rel="noopener">Confidence
-                                Interval and Hypothesis Testing Calculator</a>&nbsp;<button
+                                Interval and Hypothesis Testing Calculator</a><button
                                 onclick="copyToClipboard('CItestcalc')">Copy Embed Code to Clipboard</button>
                             <pre id="CItestcalc"
                                 style="display: none;">&lt;iframe scrolling="no" title="Confidence Interval and Hypothesis Test Calculator" src="https://www.geogebra.org/material/iframe/id/sqbsgdkk/width/1100/height/651/border/888888/sfsb/true/smb/true/stb/false/stbh/false/ai/false/asb/false/sri/true/rc/false/ld/false/sdz/false/ctl/false" width="1100px" height="651px" style="border:0px;"&gt;&lt;/iframe&gt;</pre>
