--- a/2 Unit One Content/Empirical Rule.html
+++ b/2 Unit One Content/Empirical Rule.html
@@ -90,102 +90,121 @@
                         <div class="definition">
                             <h3>What is the Empirical Rule?</h3>
                             <p>Let \(\mu\) and \(\sigma\) be the mean and standard deviation for a population that is
-                                normally distributed.&nbsp; Then the data of the normal distribution followings the
+                                <span class="blanked"><strong>normally</strong></span> distributed. Then the data of the normal distribution followings the
                                 following guidelines.</p>
                             <ul>
                                 <li><strong>Approximately 68% of the data is within one standard deviation of the
-                                        mean.</strong>&nbsp; In other words, 68% of the data is between \(\mu-\sigma\)
+                                        mean.</strong> In other words, 68% of the data is between \(\mu-\sigma\)
                                     and \(\mu+\sigma\).</li>
                                 <li><strong>Approximately 95% of the data is within two standard deviations of the
-                                        mean.</strong>&nbsp; In other words, 95% of the data is between \(\mu-2\cdot
+                                        mean.</strong> In other words, 95% of the data is between \(\mu-2\cdot
                                     \sigma\) and \(\mu+2\cdot \sigma\).</li>
                                 <li><strong>Approximately 99.7% of the data is within three standard deviations of the
-                                        mean.</strong>&nbsp; In other words, 99.70% of the data is between
+                                        mean.</strong> In other words, 99.70% of the data is between
                                     \(\mu-3\cdot\sigma\) and \(\mu+3\cdot\sigma\).</li>
                             </ul>
                             <h4>Notes</h4>
                             <ul>
                                 <li>When we draw a normal distribution with a known mean and standard deviation, we
                                     often label the \(x\)-axis with the values of \(\mu\), \(\mu\pm\sigma\), \(\mu\pm
-                                    2\cdot\sigma\), and \(\mu\pm 3\cdot\sigma\).&nbsp; For example, if \(\mu=85\) and
-                                    \(\sigma=15\), our normal distribution looks like this:<br><br><img
+                                    2\cdot\sigma\), and \(\mu\pm 3\cdot\sigma\). For example, if \(\mu=85\) and
+                                    \(\sigma=15\), our normal distribution looks like this:
+                                    <img class="img-downsized"
                                         src="../images/normalempirical85_15.png"
                                         alt="A normal distribution with mean 85 and standard deviation 15."
                                         title="A normal distribution with mean 85 and standard deviation 15."
                                         width="400" height="314"></li>
                             </ul>
                         </div>
-                        <p>Traditionally, the empirical rule required you to add an subtract areas in certain
-                            ways.&nbsp; Thankfully, with modern technology, we can focus on the most important aspect of
+                        <p>Traditionally, the empirical rule required you to add and subtract areas in certain
+                            ways. Thankfully, with modern technology, we can focus on the most important aspect of
                             the Empirical Rule: the relationship between relative frequency (percentage of data) and a
                             range of values from a normal distribution.</p>
-                        <h3 class="example-header">Example 1</h3>
-                        <p>In a national survey, a sample of women aged 20 to 29 in the United States had a mean height
-                            of 64.2 inches and a standard deviation of 2.9 inches.&nbsp; Use the <a
-                                href="https://www.geogebra.org/m/xttfsxzr" target="_blank" rel="noopener">Empirical Rule
-                                Calculator</a> to answer the following questions.</p>
-                        <ul>
-                            <li><strong>Part A:</strong> Based on this sample, what percentage of women aged 20 to 29
-                                would you expect to be between 64.2 and 67.1 inches tall?</li>
-                            <li><strong>Part B:</strong> Based on this sample, what percentage of women aged 20 to 29
-                                would you expect to be taller than 70 inches?</li>
-                            <li><strong>Part C:</strong> Based on this sample, what percentage of women aged 20 to 29
-                                would you expect to be shorter than 55.5 inches?</li>
-                        </ul>
-                        <!-- Solution Shell -->
-                        <div class="solution">
-                            <h2 class="example-header">Solution</h2>
+
+                        <div class="example">
+                            <h3 class="example-header">Example <span class="example-number"></span></h3>
+                            <p>In a national survey, a sample of women aged 20 to 29 in the United States had a mean height
+                                of 64.2 inches and a standard deviation of 2.9 inches. Use the <a
+                                    href="https://www.geogebra.org/m/xttfsxzr" target="_blank" rel="noopener">Empirical Rule
+                                    Calculator</a> to answer the following questions.</p>
                             <ul>
-                                <li><strong>Part A:</strong>
-                                    <p>Open up the <a href="https://www.geogebra.org/m/xttfsxzr" target="_blank"
-                                            rel="noopener">Empirical Rule Calculator</a>, and make sure we have the tail
-                                        type set to&nbsp;<strong>Between </strong>since we want the percentage between
-                                        two numbers.&nbsp; Set \(\mu\) to 64.2 and \(\sigma\) to 2.9.&nbsp; You will get
-                                        the following image.<br><br><img
-                                            src="../images/empirical1.png"
-                                            alt="The empirical rule calculator with mean 64.2 and standard deviation 2.9."
-                                            title="The empirical rule calculator with mean 64.2 and standard deviation 2.9."
-                                            width="450" height="252"><br><br>Notice that 64.2 is the peak, so
-                                        \(\mu=64.2\).&nbsp; Since 67.1 is one number to the right of 64.2, it is one
-                                        standard deviation above the mean; so, \(\mu+\sigma=67.1\).&nbsp; Therefore, we
-                                        set \(x_1=\mu\) (since 64.2 is the smaller number) and \(x_2=x+\sigma\) (since
-                                        67.1 is the larger number).&nbsp; The box in the upper right corner gives use
-                                        the percentage:&nbsp;<br><br><img
-                                            src="../images/empirical2.png"
-                                            alt="The percentage is 34%." title="The percentage is 34%." width="351"
-                                            height="81"><br><br>Therefore, 34% of the women are between 64.2 and 67.1
-                                        inches tall.</p>
-                                </li>
-                                <li><strong>Part B:</strong>
-                                    <p>Since we want the percentage greater than a number, we will change the tail-type
-                                        to <strong>right-tail</strong>.&nbsp; &nbsp;Make sure to change the \(\mu\) and
-                                        \(\sigma\) to the correct values since, when you change tail type, they will
-                                        default back to 0 and 1, respectively&nbsp; Since 70 is two numbers to the right
-                                        of the peak, it is two standard deviations above the mean.&nbsp; Therefore,
-                                        \(\mu+2\sigma=70\).&nbsp; This means we need to set \(x=\mu+2\sigma\).&nbsp; If
-                                        you have done everything correctly, you should get the following
-                                        output.<br><br><img
-                                            src="../images/empirical3.png"
-                                            alt="The empirical rule showing a right-tail percentage of 2.5%."
-                                            title="The empirical rule showing a right-tail percentage of 2.5%."
-                                            width="450" height="254"><br><br>Therefore, 2.5% of women in the sample are
-                                        taller than 70 inches.</p>
-                                </li>
-                                <li><strong>Part C<br></strong>Since we want the percentage less than a number, we will
-                                    change the tail-type to <strong>left-tail</strong>.&nbsp; &nbsp;Make sure to change
-                                    the \(\mu\) and \(\sigma\) to the correct values since, when you change tail type,
-                                    they will default back to 0 and 1, respectively&nbsp; Since 55.5 is three numbers to
-                                    the left of the peak, it is three standard deviations below the mean.&nbsp;
-                                    Therefore, \(\mu-3sigma=55.5\).&nbsp; This means we need to set
-                                    \(x=\mu-3\sigma\).&nbsp; If you have done everything correctly, you should get the
-                                    following output.<br><br><img
-                                        src="../images/empirical4.png"
-                                        alt="The empirical rule showing a left-tail percentage."
-                                        title="The empirical rule showing a left-tail percentage." width="452"
-                                        height="253"><br><br>Therefore, 0.15% of women in the sample are shorter than
-                                    55.5 inches.</li>
+                                <li><strong>Part A:</strong> Based on this sample, what percentage of women aged 20 to 29
+                                    would you expect to be between 64.2 and 67.1 inches tall?</li>
+                                <li><strong>Part B:</strong> Based on this sample, what percentage of women aged 20 to 29
+                                    would you expect to be taller than 70 inches?</li>
+                                <li><strong>Part C:</strong> Based on this sample, what percentage of women aged 20 to 29
+                                    would you expect to be shorter than 55.5 inches?</li>
                             </ul>
-                            <p>$$\tag*{\(\blacksquare\)}$$</p>
+                            <!-- Solution Shell -->
+                            <div class="solution">
+                                <h2 class="solution-header">Solution</h2>
+                                <ul>
+                                    <li><strong>Part A:</strong>
+                                        <div class="inches" data-height="1.5in"></div>
+                                        <div class="dontprint">
+                                            <p>Open up the <a href="https://www.geogebra.org/m/xttfsxzr" target="_blank"
+                                                    rel="noopener">Empirical Rule Calculator</a>, and make sure we have the tail
+                                                type set to<strong>Between </strong>since we want the percentage between
+                                                two numbers. Set \(\mu\) to 64.2 and \(\sigma\) to 2.9. You will get
+                                                the following image. <img class="img-downsized"
+                                                    src="../images/empirical1.png"
+                                                    alt="The empirical rule calculator with mean 64.2 and standard deviation 2.9."
+                                                    title="The empirical rule calculator with mean 64.2 and standard deviation 2.9."
+                                                    width="450" height="252"> Notice that 64.2 is the peak, so
+                                                \(\mu=64.2\). Since 67.1 is one number to the right of 64.2, it is one
+                                                standard deviation above the mean; so, \(\mu+\sigma=67.1\). Therefore, we
+                                                set \(x_1=\mu\) (since 64.2 is the smaller number) and \(x_2=x+\sigma\) (since
+                                                67.1 is the larger number). The box in the upper right corner gives use
+                                                the percentage: <img class="img-downsized"
+                                                    src="../images/empirical2.png"
+                                                    alt="The percentage is 34%." title="The percentage is 34%." width="351"
+                                                    height="81"> Therefore, 34% of the women are between 64.2 and 67.1
+                                                inches tall.</p>
+                                        </div>
+                                    </li>
+                                    <li><strong>Part B:</strong>
+                                        <div class="inches" data-height="1.5in"></div>
+                                        <div class="dontprint">
+                                            <p>Since we want the percentage greater than a number, we will change the tail-type
+                                                to <strong>right-tail</strong>. Make sure to change the \(\mu\) and
+                                                \(\sigma\) to the correct values since, when you change tail type, they will
+                                                default back to 0 and 1, respectively Since 70 is two numbers to the right
+                                                of the peak, it is two standard deviations above the mean. Therefore,
+                                                \(\mu+2\sigma=70\). This means we need to set \(x=\mu+2\sigma\). If
+                                                you have done everything correctly, you should get the following
+                                                output.</p>
+                                                <img class="img-downsized"
+                                                    src="../images/empirical3.png"
+                                                    alt="The empirical rule showing a right-tail percentage of 2.5%."
+                                                    title="The empirical rule showing a right-tail percentage of 2.5%."
+                                                    width="450" height="254">
+                                                    <p>Therefore, 2.5% of women in the sample are
+                                                taller than 70 inches.</p>
+                                        </div>
+                                    </li>
+                                    <li><strong>Part C<br></strong>
+                                        <div class="inches" data-height="1.5in"></div>
+                                        <div class="dontprint">
+                                            <p>Since we want the percentage less than a number, we will
+                                            change the tail-type to <strong>left-tail</strong>. Make sure to change
+                                            the \(\mu\) and \(\sigma\) to the correct values since, when you change tail type,
+                                            they will default back to 0 and 1, respectively Since 55.5 is three numbers to
+                                            the left of the peak, it is three standard deviations below the mean.
+                                            Therefore, \(\mu-3sigma=55.5\). This means we need to set
+                                            \(x=\mu-3\sigma\). If you have done everything correctly, you should get the
+                                            following output.</p>
+                                            <img class="img-downsized"
+                                                src="../images/empirical4.png"
+                                                alt="The empirical rule showing a left-tail percentage."
+                                                title="The empirical rule showing a left-tail percentage." width="452"
+                                                height="253">
+                                                <p>Therefore, 0.15% of women in the sample are shorter than
+                                            55.5 inches.</p>
+                                        </div>
+                                    </li>
+                                </ul>
+                                <p>$$\tag*{\(\blacksquare\)}$$</p>
+                            </div>
                         </div>
                         <!-- End Solution Shell --> <!-- Conclusion -->
                         <h2>Conclusion</h2>
