Getting some data formatted

--- a/2 Unit One Content/GeoGebra Tools and Datasets for Chapter 3.html
+++ b/2 Unit One Content/GeoGebra Tools and Datasets for Chapter 3.html
@@ -22,7 +22,7 @@
 
 <!-- CSS Stylesheets Used in Course Content Pages -->
 <link rel="stylesheet" href="../css/main.min.css">
-<link rel="stylesheet" href="../css/style.css" />
+<link rel="stylesheet" href="../css/style.css" /> 
 
 </head>
 
@@ -428,6 +428,70 @@
     </tbody>
     </table>
 
+    <p>Number of Customers visiting a coffee shop</p>
+    <pre id="percentileData" style="display:none;">Number of Customers
+5 
+10 
+15 
+20 
+25 
+30 
+35 
+40 
+45 
+50
+    </pre>
+    <button onclick="copyToClipboard('percentileData')">Copy Data to Clipboard</button>
+
+    <p>Tempature Data</p>
+    <pre id="temperatureData" style="display:none;">Temperatures
+72 
+85 
+88 
+90 
+78 
+84 
+82 
+76 
+79 
+91 
+87 
+83 
+89 
+86 
+80 
+92 
+77 
+81 
+75 
+88
+    </pre>
+    <button onclick="copyToClipboard('temperatureData')">Copy Data to Clipboard</button>
+
+    <p>Speed Dating Data</p>
+    <pre id="speedDatingData" style="display:none;">Speed date data
+2.0
+3.0 
+4.0 
+5.0 
+6.0 
+6.0 
+7.0 
+7.0 
+7.0 
+7.0 
+7.0 
+7.0 
+8.0 
+8.0 
+8.0 
+8.0 
+9.0 
+9.5 
+10.0 
+10.0
+                            </pre>
+                            <button onclick="copyToClipboard('speedDatingData')">Copy Data to Clipboard</button>
 
 <div class="d-flex justify-content-between mt-4 no-print-nav">
 <button id="prevPage" class="btn btn-outline-primary navigation-link previous" role="button">Previous Page</button>
