--- a/2 Unit One Content/Measures of Location.html
+++ b/2 Unit One Content/Measures of Location.html
@@ -275,7 +275,18 @@
                                 the
                                 course of 10 days: 35, 10, 45, 5, 30, 25, 15, 50, 20, 40. What is <strong>\(P_{40} \)</strong> for this
                                 dataset or the 40th percentile? Use GeoGebra's Summary Stats Calculator to find the value for a given percentile.</p>
-                            <pre id="percentileData" style="display:none;">5, 10, 15, 20, 25, 30, 35, 40, 45, 50</pre>
+                            <pre id="percentileData" style="display:none;">Number of Customers
+                                5 
+                                10 
+                                15 
+                                20 
+                                25 
+                                30 
+                                35 
+                                40 
+                                45 
+                                50
+                            </pre>
                             <button onclick="copyToClipboard('percentileData')">Copy Data to Clipboard</button>
                             <div class="solution">
                                 <h2 class="solution-header">Solution</h2>
@@ -331,8 +342,28 @@
                                 81, 75, 88. Find Q<sub>1</sub>, Q<sub>2</sub>, and Q<sub>3</sub> for this temperature
                                 data.
                             </p>
-                            <pre id="temperatureData"
-                                style="display:none;">72, 85, 88, 90, 78, 84, 82, 76, 79, 91, 87, 83, 89, 86, 80, 92, 77, 81, 75, 88</pre>
+                            <pre id="temperatureData" style="display:none;">Temperatures
+                                72 
+                                85 
+                                88 
+                                90 
+                                78 
+                                84 
+                                82 
+                                76 
+                                79 
+                                91 
+                                87 
+                                83 
+                                89 
+                                86 
+                                80 
+                                92 
+                                77 
+                                81 
+                                75 
+                                88
+                            </pre>
                             <button onclick="copyToClipboard('temperatureData')">Copy Data to Clipboard</button>
 
                             <div class="solution">
@@ -363,7 +394,7 @@
 
 <div class="notes-page-break"></div>
 
-                        <div class="example">
+                        <div class="example"> 
                             <h2 class="example-header">Example <span class="example-number"></span>: Box Plot from Speed
                                 Dating Study</h2>
                             <p>In a study of speed dating conducted at Columbia University, female subjects rated the
@@ -373,8 +404,28 @@
                                 9.5,
                                 10.0, 10.0. \]
                                 Use this data to find the five-number summary and construct a box plot.</p>
-                            <pre id="speedDatingData"
-                                style="display:none;">2.0, 3.0, 4.0, 5.0, 6.0, 6.0, 7.0, 7.0, 7.0, 7.0, 7.0, 7.0, 8.0, 8.0, 8.0, 8.0, 9.0, 9.5, 10.0, 10.0</pre>
+                                <pre id="speedDatingData" style="display:none;">Speed date data
+                                    2.0
+                                    3.0 
+                                    4.0 
+                                    5.0 
+                                    6.0 
+                                    6.0 
+                                    7.0 
+                                    7.0 
+                                    7.0 
+                                    7.0 
+                                    7.0 
+                                    7.0 
+                                    8.0 
+                                    8.0 
+                                    8.0 
+                                    8.0 
+                                    9.0 
+                                    9.5 
+                                    10.0 
+                                    10.0
+                                </pre>
                             <button onclick="copyToClipboard('speedDatingData')">Copy Data to Clipboard</button>
 
                             <div class="solution">
